tests/paczka1/small_fuzzy/95799690.err
Error in line 3: mYjr5JG A981 61,9
Error in line 1: rDhqgAL91zk A639 89,4
